# chipurat8

./: Cargo.toml  LICENSE  README.md
src/: chip8.rs  main.rs
