[package]
name = "chipurat8"
version = "0.1.0"
authors = ["David Phillips <dp@profile.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2"
winit = "0.22"
winit_input_helper = "0.7"
clap = "3.0.0-beta.2"
rand = "0.7"
rodio = "0.11"
